refactor to docker compose